force-app/main/default/objects/Informe_Direccion__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <description>Asunto del correo electrónico</description>
    <inlineHelpText>Email subject</inlineHelpText>
    <label>Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>