force-app/main/default/objects/Informe_Direccion__c/fields/Enviado__c.field-meta.xml
<CustomField>
    <fullName>Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>De uso del sistema, se marcará cuando el informe haya sido enviado</description>
    <label>Enviado</label>
    <type>Checkbox</type>
</CustomField>