force-app/main/default/objects/Informe_Direccion__c/fields/Enviar_a__c.field-meta.xml
<CustomField>
    <fullName>Enviar_a__c</fullName>
    <description>Lista de emails a los que se debe enviar el mensaje separados por coma</description>
    <inlineHelpText>List of email addresses to which the message should be sent, separated by commas</inlineHelpText>
    <label>Enviar a</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>