force-app/main/default/objects/Informe_Direccion__c/fields/Fecha_Enviado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Enviado__c</fullName>
    <description>Uso del sistema, fecha en la que se envió el informe</description>
    <inlineHelpText>System usage, date the report was sent</inlineHelpText>
    <label>Fecha Enviado</label>
    <type>Date</type>
</CustomField>