force-app/main/default/objects/Informe_Direccion__c/fields/Grafica__c.field-meta.xml
<CustomField>
    <fullName>Grafica__c</fullName>
    <formula>&quot;&lt;&lt;Aquí se mostrará la tabla del informe semanal&gt;&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gráfica</label>
    <type>Text</type>
</CustomField>