force-app/main/default/objects/Informe_Direccion__c/fields/Informacion_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Informacion_Cierre__c</fullName>
    <label>Información Cierre</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>