force-app/main/default/objects/Informe_Direccion__c/fields/Informacion_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Informacion_Inicial__c</fullName>
    <label>Información Inicial</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>