force-app/main/default/objects/Informe_Direccion__c/fields/Se_envio__c.field-meta.xml
<CustomField>
    <fullName>Se_envio__c</fullName>
    <formula>Enviado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Se envió</label>
    <type>Checkbox</type>
</CustomField>