force-app/main/default/objects/Informe_Direccion__c/fields/Se_envio_en__c.field-meta.xml
<CustomField>
    <fullName>Se_envio_en__c</fullName>
    <formula>IF(ISBLANK(Fecha_Enviado__c),
&apos;[No enviado aún]&apos;,
TEXT(DAY(Fecha_Enviado__c)) + &apos;/&apos; + TEXT(MONTH(Fecha_Enviado__c)) + &apos;/&apos; + TEXT(YEAR(Fecha_Enviado__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Se envió en</label>
    <type>Text</type>
</CustomField>