force-app/main/default/objects/Informe_Direccion__c/fields/UltimaModificacionPorOrigen__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionPorOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Última modificación por (origen)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Informes_Direcci_n_UltimaModificacionPor</relationshipName>
    <type>Lookup</type>
</CustomField>